# Encoder-Chinese-SLM

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  ENVIRONMENT.md  PRETRAINING_AUDIT.md  README.md  REFERENCES.md  environment.yml  pyproject.toml  requirements.txt
configs/: deepspeed_h20_zero1_bf16.json  h20_8gpu_bert_0p2b_deepspeed.yaml  scenic_sft_8gpu.yaml  scenic_sft_contrastive_dataset_8gpu.yaml  scenic_sft_training_dataset_8gpu.yaml  smoke.yaml
data/: sample_zh_dialog.jsonl
scripts/: download_data.py  eval_ceval.py  eval_ceval_onepath.py  eval_scenic_sft_comparison.py  eval_scenic_sft_local.py  launch_h20_8gpu.sh  launch_scenic_sft_8gpu.sh  launch_scenic_sft_separate_8gpu.sh  pack_tokens.py  plot_loss.py  prepare_data.py  prune_scenic_sft.py  prune_scenic_sft_50_eval.sh  prune_scenic_sft_all_methods_eval.sh  prune_scenic_sft_reference_methods.py  prune_scenic_sft_reference_methods_50_eval.sh  run_full_pipeline_8gpu.sh  run_scenic_reference_pruning_local.py  run_scenic_sft_eval_local.py  summarize_training_run.py  train.py  train_scenic_sft.py  train_tokenizer.py
src/chatlm_encoder/: __init__.py  config.py  data.py  metrics.py  model.py  preprocess.py  scenic_sft.py  tokenizer.py
